@@ -12,7 +12,6 @@ import de.monticore.cdbasis._ast.ASTCDClass;
 import de.monticore.cdbasis._ast.ASTCDCompilationUnit;
 import de.monticore.cdbasis._ast.ASTCDDefinition;
 import de.monticore.cdbasis._symboltable.CDTypeSymbol;
-import de.monticore.cdbasis._symboltable.CDTypeSymbolSurrogate;
 import de.monticore.cdbasis._symboltable.ICDBasisArtifactScope;
 import de.monticore.cdbasis._symboltable.ICDBasisScope;
 import de.monticore.cdinterfaceandenum._ast.ASTCDEnum;
@@ -22,6 +21,7 @@ import de.monticore.generating.templateengine.StringHookPoint;
 import de.monticore.generating.templateengine.TemplateHookPoint;
 import de.monticore.symbols.basicsymbols._symboltable.DiagramSymbol;
 import de.monticore.symbols.basicsymbols._symboltable.TypeSymbol;
+import de.monticore.symboltable.ImportStatement;
 import de.monticore.types.check.SymTypeExpression;
 import de.monticore.types.mcbasictypes.MCBasicTypesMill;
 import de.monticore.types.mcbasictypes._ast.ASTMCQualifiedName;
@@ -86,8 +86,8 @@ public class ParserForSuperDecorator extends AbstractDecorator {
     Map<DiagramSymbol, Collection<CDTypeSymbol>> superProdsFromThis = calculateNonOverriddenCds(Maps.newLinkedHashMap(), service.getCDSymbol(), overridden, Lists.newArrayList());
 
     //necessary if a nt is overridden in a grammar between the super grammar and this grammar
-    List<CDTypeSymbol> allSuperProdsFromThis = superProdsFromThis.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
-    List<String> superProdsFullNames = allSuperProdsFromThis.stream().map(CDTypeSymbol::getFullName).collect(Collectors.toList());
+    List<CDTypeSymbol> allSuperProdsFromThis = superProdsFromThis.values().stream().flatMap(Collection::stream).toList();
+    List<String> superProdsFullNames = allSuperProdsFromThis.stream().map(CDTypeSymbol::getFullName).toList();
 
     for(DiagramSymbol grammar: superProds.keySet()){
       Collection<CDTypeSymbol> typesInGrammar = superProds.get(grammar);
@@ -98,7 +98,7 @@ public class ParserForSuperDecorator extends AbstractDecorator {
       typesInGrammar.removeIf(type ->
           (service.hasLeftRecursiveStereotype(type.getAstNode().getModifier())|| service.hasExternalInterfaceStereotype(type.getAstNode().getModifier())));
     }
-    List<CDTypeSymbol> allOverriddenTypes = overridden.values().stream().flatMap(Collection::stream).collect(Collectors.toList());
+    List<CDTypeSymbol> allOverriddenTypes = overridden.values().stream().flatMap(Collection::stream).toList();
 
 
     //iterate over every overridden prod, generate parse methods for them
@@ -195,9 +195,9 @@ public class ParserForSuperDecorator extends AbstractDecorator {
     LinkedHashMap<String, CDTypeSymbol> l = Maps.newLinkedHashMap();
     //get all super cds / imports of the original cd
     Collection<DiagramSymbol> importedClasses = ((ICDBasisArtifactScope) cd.getEnclosingScope()).getImportsList().stream()
-        .map(i -> i.getStatement())
+        .map(ImportStatement::getStatement)
         .map(service::resolveCD)
-        .collect(Collectors.toList());
+        .toList();
     Collection<CDTypeSymbol> overriddenSet = Lists.newArrayList();
     //determine for every native prod of the original grammar if the super grammar has a prod with the same name
     //if yes then the prod is overridden
@@ -332,7 +332,7 @@ public class ParserForSuperDecorator extends AbstractDecorator {
   protected void getSuperTypesTransitive(List<CDTypeSymbol> resolvedTypes, Set<String> superTypes) {
     // if types is empty: CD Symbol not loaded (e.g., external type?) => unable to continue to load supertypes
     if (!resolvedTypes.isEmpty()) {
-      CDTypeSymbol startTypeSymbol = resolvedTypes.get(0); // we expect to only find 1 symbol
+      CDTypeSymbol startTypeSymbol = resolvedTypes.getFirst(); // we expect to only find 1 symbol
       if (startTypeSymbol.isPresentSuperClass()) {
         // if a superclass is present: delve into it
         getSuperTypesTransitive(startTypeSymbol.getSuperClass().getTypeInfo(), superTypes);
