@@ -10,7 +10,6 @@ import de.se_rwth.commons.logging.Log;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class NoForbiddenSymbolName implements GrammarASTMCGrammarCoCo {
 
@@ -29,12 +28,12 @@ public class NoForbiddenSymbolName implements GrammarASTMCGrammarCoCo {
     List<ProdSymbol> symbolProds = symbol.getProdsWithInherited().values()
         .stream()
         .filter(ProdSymbol::isIsSymbolDefinition)
-        .collect(Collectors.toList());
+        .toList();
     if(grammarName.endsWith(SYMBOL)){
       String nameWithoutSymbol = grammarName.substring(0,grammarName.lastIndexOf(SYMBOL));
       List<ProdSymbol> forbidden = symbolProds.stream()
           .filter(p -> p.getName().equals(nameWithoutSymbol))
-          .collect(Collectors.toList());
+          .toList();
       if(!forbidden.isEmpty()){
         for(ProdSymbol prod: forbidden){
           Log.error(ERROR_CODE + String.format(ERROR_MSG_FORMAT, prod.getName(), grammarName), prod.getSourcePosition());
