@@ -165,9 +165,9 @@ public class WithinTypeBasicSymbolsResolver {
     for (String name : names) {
       Optional<SymTypeExpression> varOpt =
           resolveVariable(thisType, name, accessModifier, predicate);
-      if (varOpt.isPresent()) {
-        allVariables.put(name, varOpt.get());
-      }
+      varOpt.ifPresent(symTypeExpression ->
+          allVariables.put(name, symTypeExpression)
+      );
     }
     return allVariables;
   }
@@ -200,12 +200,11 @@ public class WithinTypeBasicSymbolsResolver {
       AccessModifier accessModifier,
       Predicate<FunctionSymbol> predicate
   ) {
-    List<SymTypeOfFunction> resolvedSymTypes = new ArrayList<>();
     List<SymTypeOfFunction> resolvedInThis =
         resolveFunctionsInThisType(
             thisType, name, accessModifier, predicate
         );
-    resolvedSymTypes.addAll(resolvedInThis);
+    List<SymTypeOfFunction> resolvedSymTypes = new ArrayList<>(resolvedInThis);
     // search in super types
     List<SymTypeOfFunction> resolvedInSuper =
         resolvedFunctionsInSuperTypes(
@@ -559,13 +558,78 @@ public class WithinTypeBasicSymbolsResolver {
             .and(getIsNotTypeVarSymbolPredicate())
             .and(getIsLocalSymbolPredicate(scope))
         )
-        .collect(Collectors.toList());
+        .toList();
     // todo remove as soon as resolveTypeLocally is used
     if (resolved.size() > 1) {
       Log.error("0xFD221 resolved multiple types \""
           + name + "\" (locally in the same scope)");
     }
     return resolved.stream().findAny();
+  }
+
+  /**
+   * Resolves a type identifier as an expression,
+   * delegates to
+   * {@link #getTypeAsExpression(SymTypeExpression, AccessModifier)}.
+   */
+  public static Optional<SymTypeExpression> resolveTypeAsExpression(
+      SymTypeExpression thisType,
+      String name,
+      AccessModifier accessModifier,
+      Predicate<TypeSymbol> predicate
+  ) {
+    return getDelegate()
+        ._resolveTypeAsExpression(thisType, name, accessModifier, predicate);
+  }
+
+  protected Optional<SymTypeExpression> _resolveTypeAsExpression(
+      SymTypeExpression thisType,
+      String name,
+      AccessModifier accessModifier,
+      Predicate<TypeSymbol> predicate) {
+    Optional<SymTypeExpression> typeIdType =
+        resolveType(thisType, name, accessModifier, predicate);
+    Optional<SymTypeExpression> typeIdAsExprType = typeIdType.flatMap(t ->
+        WithinTypeBasicSymbolsResolver.getTypeAsExpression(t, accessModifier)
+    );
+    return typeIdAsExprType;
+  }
+
+  /**
+   * Takes a type identifier,
+   * but returns the type of the corresponding expression.
+   * This is used whenever an expression is required,
+   * but the name cannot be resolved to an expression.
+   * If the name refers to a type,
+   * the type identifier can be interpreted as an expression,
+   * depending on the language.
+   * <p>
+   * Example: {@code Person("Riley", 26);}
+   * is used by a greater subset of MontiCore languages
+   * as the object construction of a {@code Person},
+   * even though {@code Person} is not an expression
+   * but a type identifier.
+   * <p>
+   * {@link WithinScopeBasicSymbolsResolver#resolveNameAsExpr(IBasicSymbolsScope, String)}
+   * and similar should always have the higher priority!
+   *
+   * @param thisType       the type resolved
+   * @param accessModifier the modifier used to access the type identifier
+   * @return the type of the expression
+   *     which is based on the resolved type
+   */
+  protected static Optional<SymTypeExpression> getTypeAsExpression(
+      SymTypeExpression thisType,
+      AccessModifier accessModifier
+  ) {
+    return getDelegate()._getTypeAsExpression(thisType, accessModifier);
+  }
+
+  protected Optional<SymTypeExpression> _getTypeAsExpression(
+      SymTypeExpression thisType,
+      AccessModifier accessModifier
+  ) {
+    return Optional.empty();
   }
 
   // Helper
@@ -650,7 +714,7 @@ public class WithinTypeBasicSymbolsResolver {
           ((SymTypeOfUnion) type).getUnionizedTypeSet();
       Optional<SymTypeExpression> lubOpt =
           SymTypeRelations.leastUpperBound(unionizedTypes);
-      spannedScope = lubOpt.flatMap(lub -> getSpannedScope(lub));
+      spannedScope = lubOpt.flatMap(this::getSpannedScope);
     }
     else if (type.isRegExType()) {
       // considered empty, String is the (direct) nominal supertype,
@@ -805,7 +869,7 @@ public class WithinTypeBasicSymbolsResolver {
           .getSpannedScope().getLocalTypeVarSymbols();
       List<SymTypeVariable> includedVars = includedVarSyms.stream()
           .map(SymTypeExpressionFactory::createTypeVariable)
-          .collect(Collectors.toList());
+          .toList();
       if (freeTypeVars.stream().anyMatch(
           ftv -> includedVars.stream().noneMatch(ftv::deepEquals))
       ) {
